tests/expected_invalid_affine_reuse_argument.diag.out
<input>:17:13: error: affine value 'receipt' was already moved
        consume(receipt)
                ^^^^^^^
<input>:16:13: note: 'receipt' was previously moved here
        consume(receipt);
                ^^^^^^^
